deploy/kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: useful-cookery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: useful-cookery.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: useful-cookery-api
                port:
                  number: 8080
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: useful-cookery-ui
                port:
                  number: 80
